# stinky_vst

./: .gitignore  CMakeLists.txt  Makefile  README.md  ocarina-synth-plan.txt  stinky_vst.jucer
Libs/JUCE-Build/: JUCEExportConfig.cmake
Libs/JUCE-Build/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
Libs/JUCE-Subbuild/: CMakeLists.txt
Source/: BreathSound.cpp  BreathSound.h  FormantFilter.cpp  FormantFilter.h  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h  SawWave.cpp  SawWave.h  SineWave.cpp  SineWave.h  Square.cpp  Square.h  StinkySound.h  StinkyVoice.cpp  StinkyVoice.h  TriangleWave.cpp  TriangleWave.h  WaveType.h  WaveformView.h
scripts/: gen-compile-flags.sh
stinky_vst/: stinky_vst.jucer
stinky_vst/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
stinky_vst/Source/: PluginEditor.cpp  PluginProcessor.cpp
